@@ -60,6 +60,29 @@
     (setq list (funcall sym list "first" 1 #'string=))
     (should (eq (compat-call plist-get list "first" #'string=) 1))))
 
+(ert-deftest buttonize ()
+  (let ((b (buttonize "button" 'c 'd 'h)))
+    (should-equal b "button")
+    (should-equal 'c (get-text-property 0 'action b))
+    (should-equal 'c (get-text-property 5 'action b))
+    (should-equal 'd (get-text-property 0 'button-data b))
+    (should-equal 'd (get-text-property 5 'button-data b))
+    (should-equal 'h (get-text-property 0 'help-echo b))
+    (should-equal 'h (get-text-property 5 'help-echo b))))
+
+(ert-deftest buttonize-region ()
+  (with-temp-buffer
+    (insert "<button>")
+    (buttonize-region 2 7 'c 'd 'h)
+    (should-not (get-text-property 1 'action))
+    (should-not (get-text-property 7 'action))
+    (should-equal 'c (get-text-property 2 'action))
+    (should-equal 'c (get-text-property 6 'action))
+    (should-equal 'd (get-text-property 2 'button-data))
+    (should-equal 'd (get-text-property 6 'button-data))
+    (should-equal 'h (get-text-property 2 'help-echo))
+    (should-equal 'h (get-text-property 6 'help-echo))))
+
 (ert-deftest with-memoization ()
   (let ((x (cons nil nil)) y computed)
     (with-memoization (car x)
