@@ -7,6 +7,7 @@
 - compat-28: Add ~make-separator-line~.
 - compat-29: Minor fixes to ~keymap-*~ functions.
 - compat-29: Add ~with-memoization~.
+- compat-29: Add ~buttonize~ and ~buttonize-region~.
 
 * Release of "Compat" Version 29.1.1.0
 
